tests/snapshots/07_scrabble_all_options_09_HashJoinExec.snap
---
source: tests/integration_tests.rs
expression: preview
---
+-------------+-------------+-------------+--------+
| n_nationkey | nation_name | region_name | points |
|=============+=============+=============+========|
| 0           | ALGERIA     | AFRICA      | 1      |
|-------------+-------------+-------------+--------|
| 0           | ALGERIA     | AFRICA      | 1      |
|-------------+-------------+-------------+--------|
| 0           | ALGERIA     | AFRICA      | 2      |
|-------------+-------------+-------------+--------|
| 0           | ALGERIA     | AFRICA      | 1      |
|-------------+-------------+-------------+--------|
| 0           | ALGERIA     | AFRICA      | 1      |
+-------------+-------------+-------------+--------+
