tests/snapshots/07_scrabble_all_options_10_HashJoinExec.snap
---
source: tests/integration_tests.rs
expression: preview
---
+-------------+-------------+-------------+--------+
| n_nationkey | nation_name | region_name | points |
|=============+=============+=============+========|
| 1           | ARGENTINA   | AMERICA     | 1      |
|-------------+-------------+-------------+--------|
| 1           | ARGENTINA   | AMERICA     | 1      |
|-------------+-------------+-------------+--------|
| 1           | ARGENTINA   | AMERICA     | 2      |
|-------------+-------------+-------------+--------|
| 1           | ARGENTINA   | AMERICA     | 1      |
|-------------+-------------+-------------+--------|
| 1           | ARGENTINA   | AMERICA     | 1      |
+-------------+-------------+-------------+--------+
