tests/snapshots/07_scrabble_all_options_10_ProjectionExec.snap
---
source: tests/integration_tests.rs
expression: preview
---
+-------------+-------------+-------------+--------+
| n_nationkey | nation_name | region_name | letter |
|=============+=============+=============+========|
| 0           | ALGERIA     | AFRICA      | A      |
|-------------+-------------+-------------+--------|
| 0           | ALGERIA     | AFRICA      | L      |
|-------------+-------------+-------------+--------|
| 0           | ALGERIA     | AFRICA      | G      |
|-------------+-------------+-------------+--------|
| 0           | ALGERIA     | AFRICA      | E      |
|-------------+-------------+-------------+--------|
| 0           | ALGERIA     | AFRICA      | R      |
+-------------+-------------+-------------+--------+
