tests/snapshots/07_scrabble_all_options_11_AggregateExec.snap
---
source: tests/integration_tests.rs
expression: preview
---
+-------------+---------------+-------------+------------------+
| n_nationkey | nation_name   | region_name | sum(s.points)[su |
|             |               |             | m]               |
|=============+===============+=============+==================|
| 1           | ARGENTINA     | AMERICA     | 10               |
|-------------+---------------+-------------+------------------|
| 2           | BRAZIL        | AMERICA     | 17               |
|-------------+---------------+-------------+------------------|
| 3           | CANADA        | AMERICA     | 9                |
|-------------+---------------+-------------+------------------|
| 17          | PERU          | AMERICA     | 6                |
|-------------+---------------+-------------+------------------|
| 24          | UNITED STATES | AMERICA     | 13               |
+-------------+---------------+-------------+------------------+
