tests/snapshots/07_scrabble_all_options_11_RepartitionExec.snap
---
source: tests/integration_tests.rs
expression: preview
---
+-------------+-------------+-------------+--------------------+
| n_nationkey | nation_name | region_name | sum(s.points)[sum] |
|=============+=============+=============+====================|
| 0           | ALGERIA     | AFRICA      | 8                  |
|-------------+-------------+-------------+--------------------|
| 7           | GERMANY     | EUROPE      | 13                 |
|-------------+-------------+-------------+--------------------|
| 12          | JAPAN       | ASIA        | 14                 |
|-------------+-------------+-------------+--------------------|
| 19          | ROMANIA     | EUROPE      | 9                  |
|-------------+-------------+-------------+--------------------|
| 22          | RUSSIA      | EUROPE      | 6                  |
+-------------+-------------+-------------+--------------------+
