tests/snapshots/07_scrabble_all_options_12_ProjectionExec.snap
---
source: tests/integration_tests.rs
expression: preview
---
+-------------+---------------+-------------+------------------+
| n_nationkey | nation_name   | region_name | __unnest_placeho |
|             |               |             | lder(n.letters)  |
|=============+===============+=============+==================|
| 1           | ARGENTINA     | AMERICA     | [A, R, G, E, N,  |
|             |               |             | T, I, N, A]      |
|-------------+---------------+-------------+------------------|
| 2           | BRAZIL        | AMERICA     | [B, R, A, Z, I,  |
|             |               |             | L]               |
|-------------+---------------+-------------+------------------|
| 3           | CANADA        | AMERICA     | [C, A, N, A, D,  |
|             |               |             | A]               |
|-------------+---------------+-------------+------------------|
| 17          | PERU          | AMERICA     | [P, E, R, U]     |
|-------------+---------------+-------------+------------------|
| 24          | UNITED STATES | AMERICA     | [U, N, I, T, E,  |
|             |               |             | D,  , S, T, A,   |
|             |               |             | T, E, S]         |
+-------------+---------------+-------------+------------------+
