tests/snapshots/07_scrabble_all_options_14_AggregateExec.snap
---
source: tests/integration_tests.rs
expression: preview
---
+-------------+-------------+-------------+--------------------+
| n_nationkey | nation_name | region_name | sum(s.points)[sum] |
|=============+=============+=============+====================|
| 0           | ALGERIA     | AFRICA      | 8                  |
|-------------+-------------+-------------+--------------------|
| 1           | ARGENTINA   | AMERICA     | 10                 |
|-------------+-------------+-------------+--------------------|
| 2           | BRAZIL      | AMERICA     | 17                 |
|-------------+-------------+-------------+--------------------|
| 3           | CANADA      | AMERICA     | 9                  |
|-------------+-------------+-------------+--------------------|
| 4           | EGYPT       | MIDDLE EAST | 11                 |
+-------------+-------------+-------------+--------------------+
