tests/snapshots/07_scrabble_all_options_14_ProjectionExec.snap
---
source: tests/integration_tests.rs
expression: preview
---
+-------------+-------------+-------------+--------+
| n_nationkey | nation_name | region_name | letter |
|=============+=============+=============+========|
| 1           | ARGENTINA   | AMERICA     | A      |
|-------------+-------------+-------------+--------|
| 1           | ARGENTINA   | AMERICA     | R      |
|-------------+-------------+-------------+--------|
| 1           | ARGENTINA   | AMERICA     | G      |
|-------------+-------------+-------------+--------|
| 1           | ARGENTINA   | AMERICA     | E      |
|-------------+-------------+-------------+--------|
| 1           | ARGENTINA   | AMERICA     | N      |
+-------------+-------------+-------------+--------+
