tests/snapshots/07_scrabble_all_options_26_SortExec.snap
---
source: tests/integration_tests.rs
expression: preview
---
+------------+------------+------------+-----------+-----------+
| region_nam | nation_nam | scrabble_s | region_av | nation_ra |
| e          | e          | core       | g_scrabbl | nk_in_reg |
|            |            |            | e_score   | ion       |
|============+============+============+===========+===========|
| AMERICA    | BRAZIL     | 17         | 11.0      | 1         |
|------------+------------+------------+-----------+-----------|
| AMERICA    | UNITED     | 13         | 11.0      | 2         |
|            | STATES     |            |           |           |
|------------+------------+------------+-----------+-----------|
| AMERICA    | ARGENTINA  | 10         | 11.0      | 3         |
|------------+------------+------------+-----------+-----------|
| AMERICA    | CANADA     | 9          | 11.0      | 4         |
|------------+------------+------------+-----------+-----------|
| AMERICA    | PERU       | 6          | 11.0      | 5         |
+------------+------------+------------+-----------+-----------+
