tests/snapshots/07_scrabble_all_options_27_SortExec.snap
---
source: tests/integration_tests.rs
expression: preview
---
+-------------+---------------+----------------+
| region_name | nation_name   | scrabble_score |
|=============+===============+================|
| AMERICA     | BRAZIL        | 17             |
|-------------+---------------+----------------|
| AMERICA     | UNITED STATES | 13             |
|-------------+---------------+----------------|
| AMERICA     | ARGENTINA     | 10             |
|-------------+---------------+----------------|
| AMERICA     | CANADA        | 9              |
|-------------+---------------+----------------|
| AMERICA     | PERU          | 6              |
+-------------+---------------+----------------+
