tests/snapshots/07_scrabble_all_options_30_SortPreservingMergeExec.snap
---
source: tests/integration_tests.rs
expression: preview
---
+------------+------------+------------+-----------+-----------+
| region_nam | nation_nam | scrabble_s | region_av | nation_ra |
| e          | e          | core       | g_scrabbl | nk_in_reg |
|            |            |            | e_score   | ion       |
|============+============+============+===========+===========|
| ASIA       | JAPAN      | 14         | 10.4      | 1         |
|------------+------------+------------+-----------+-----------|
| ASIA       | VIETNAM    | 12         | 10.4      | 2         |
|------------+------------+------------+-----------+-----------|
| ASIA       | CHINA      | 10         | 10.4      | 3         |
|------------+------------+------------+-----------+-----------|
| ASIA       | INDONESIA  | 10         | 10.4      | 3         |
|------------+------------+------------+-----------+-----------|
| ASIA       | INDIA      | 6          | 10.4      | 5         |
+------------+------------+------------+-----------+-----------+
